...
      <Tabs.Screen
        name="index"
        options={{
          title: 'Home',
          tabBarIcon: ({ color }) => <IconSymbol size={28} name="house.fill" color={color} />,
          tabBarAccessibilityLabel: 'Home Tab',
          tabBarButton: (props) => <HapticTab {...props} testID="tab-home" />,
        }}
      />
      <Tabs.Screen
        name="tasks"
        options={{
          title: 'Tasks',
...
      <Tabs.Screen
        name="explore"
        options={{
          title: 'Explore',
          tabBarIcon: ({ color }) => <IconSymbol size={28} name="paperplane.fill" color={color} />,
          tabBarAccessibilityLabel: 'Explore Tab',
          tabBarButton: (props) => <HapticTab {...props} testID="tab-explore" />,
        }}
      />
    </Tabs>
  );
}

